--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
+
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
@@ -13,31 +13,6 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <div class="container card">
-        <div class="row pt-2">
-          <div class="col-12 border border-danger">
-            <img
-              src="https://static.vecteezy.com/system/resources/previews/012/227/439/non_2x/playing-card-suit-symbol-spades-png.png"
-              class="float-start img-thumbnail pica"
-              alt="pica"
-            />
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12 d-flex justify-content-center">
-            <h1 class="num text-center">3</h1>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12">
-            <img
-            src="https://static.vecteezy.com/system/resources/previews/012/227/439/non_2x/playing-card-suit-symbol-spades-png.png"
-            class="rounded float-end pica"
-            alt="pica"
-            />
-          </div>
-        </div>
-      </div>
-    </div>
+    <div id="card"></div>
   </body>
 </html>
